# haskell-aoc-2023

./: LICENSE  README.MD  haskell-aoc2023.cabal
app/: Main.hs
lib/: DayEight.hs  DayEleven.hs  DayFive.hs  DayFour.hs  DayNine.hs  DayOne.hs  DaySeven.hs  DaySix.hs  DayTen.hs  DayThree.hs  DayTwo.hs
test/: Main.hs
